[package]
name = "ukmmsg2json"
version = "1.0.0"
edition = "2021"
description = "Convert UKMM Msg files to readable and editable JSON"
repository = "https://github.com/NiceneNerd/ukmmsg2json"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
indexmap = { version = "2.7", features = ["serde"] }
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
roead = { version = "1.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zstd = { version = "0.13.3", features = ["experimental"] }
