[package]
name = "ukmmsg2json"
version = "0.2.0"
edition = "2021"
description = "Convert UKMM .sarc files (text) to readable and editable json"
repository = "https://github.com/NiceneNerd/ukmmsg2json"
license = "MIT"

[dependencies]
anyhow = "1.0"
indexmap = { version = "2.7", features = ["serde"] }
msyt = { git = "https://github.com/NiceneNerd/msyt", rev = "12e4d95fb6480f445284f37706db7bfa8351dc06" }
roead = { version = "1.0", features = ["with-serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2"
zstd = { version = "0.13.3", features = ["experimental"] }
